--- a/Dolls.html
+++ b/Dolls.html
@@ -131,12 +131,14 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </section>
 
 
+
+
 	          <div id="myModal" class="modal">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
                 <div class="modal-content">
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/mkym3w.jpg" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/mkym3w.jpg" style="width: 40%; margin-left:auto; margin-right:auto; position: relative;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
 		 This doll was a result of my free periods in my senior year schedule in high school. <p>
@@ -148,8 +150,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/w2bryr.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/w2bryr.jpg" style="width: 40%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
 		 This doll was a result of my free periods in my senior year schedule in high school. <p>
@@ -161,8 +163,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/pa4bus.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/pa4bus.jpg" style="width: 40%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
 		 This doll was a result of my free periods in my senior year schedule in high school. <p>
@@ -174,8 +176,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/izklia.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/izklia.jpg" style="width: 40%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Honey - 2022</h2>
 	 <p><p>Of all of my customs she was the first that had a level of craftsmanship that I could be proud of. <p>
 		 
@@ -186,8 +188,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/csbxw9.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/csbxw9.jpg" style="width: 40%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Midnight - 2022</h2>
 	 <p>This doll was a result of me wanting a doll with some sick goth makeup, as I had been knee deep in my own goth "phase" (part of me will always be goth)
 		<p>
@@ -196,8 +198,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/o5vy3q.jpg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/o5vy3q.jpg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Daria - 2023</h2>
 	 <p>This is among my most recent and (not coincidentally) most polished dolls</p>
 							I found the base doll at goodwill and I immediately knew what my vision was: a pink girly girl with a heart motif.
@@ -206,8 +208,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
 
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/uc7fyo.jpg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/uc7fyo.jpg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Amaya - 2022</h2></p>
 							This doll came to me ina  banged up state, with her upper eyelids somehow getting stained.
 							<p>
@@ -217,8 +219,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Portrait Doll - 2023</h2></p>
 							One of my... odder dolls, she was made from a beat up draculaura i scored at my local GoodWill and her hair is... my own.
 							<p>
@@ -230,8 +232,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		    </div>
 			
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/a6vyah.jpg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/a6vyah.jpg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Frankie - 2024</h2></p>
 							This frankie is my most recent custom to date, and perhaps much more understated than some of my others.
 							<p>
@@ -240,8 +242,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
                     <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/zsvaet.jpg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/zsvaet.jpg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Meowlody - 2022</h2></p>
 							This doll was a long time coming, i had made sketches for her about 6 months before i had the courage to start, and the first meowlody i used turned out to have a very weak head, and it split open and was sadly, irreparable.
 							<p>
@@ -253,8 +255,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
 		 <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/7y8kj2.jpg" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="https://files.catbox.moe/7y8kj2.jpg" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Jeannie - 2024</h2></p>
 							And now my first American Girl Doll to have a custom face up.
 							<br>
@@ -263,13 +265,13 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>		
 					
 					<!---<div class="mySlides">
-                        <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;">
                         </div>
                     </div>		 <div class="mySlides">
-                        <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                        <div class="container-fluid">
+                            <img src="" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2></h2></p>
                         </div>
                     </div>
