--- a/Dolls.html
+++ b/Dolls.html
@@ -75,7 +75,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 
 	  
-<div class="container">
+<div class="container-fluid">
 	
 <div class="sidebyside">
 	
@@ -93,7 +93,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </section>
 	<p></p>
 	
-<div class="container">
+<div class="container-fluid">
 
 <div class="sidebyside">
 	
@@ -118,7 +118,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </section>
 	<p></p>
-	<div class="container">
+	<div class="container-fluid">
 
 <div class="sidebyside">
 	
