--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
 <!--hey you! what're looking for? :3 thanks for checking out the code!-->
-<html>
+<html lang="eng">
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" />
+		<title>ꕥErika Ornelasꕥ</title>
 
+		<link rel="icon" href="https://er1k4.neocities.org/favicon.ico" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="style.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap"
+			rel="stylesheet" />
+	</head>
 
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<title>ꕥErika Ornelasꕥ</title>
+	<body>
+		<ul>
+			<li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+			<li><a href="/Contact">Contact</a></li>
+			<li><a href="/About">About</a></li>
+			<li><a href="/">Home</a></li>
+		</ul>
 
-  <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-</head>
-  
-  
-<body>
-   <ul>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
-  <li><a href="/About">About</a></li>
-  <li><a href="/">Home</a></li>
-</ul>
-	
-  <h1 style="left:5%;"><i>Erika Ornelas</I></h1>
+		<h1 style="left: 5%"><i>Erika Ornelas</i></h1>
 
-	<div class="container-fluid">
-      <h2>Welcome to my hand-made portfolio!</h2>
-    <br>
-			<h3 style="text-align:center;"> Here you will find various pieces demonstrating my art and design capabilities, the site itself acts as a piece from my portfolio as well. 
-				<p></p>
-				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
-				<br>
+		<div class="container-fluid">
+			<h2>Welcome to my hand-made portfolio!</h2>
+			<br />
+			<h3 style="text-align: center">
+				Here you will find various pieces demonstrating my art and design capabilities, the site itself acts as
+				a piece from my portfolio as well.
+				<p />
+				I believe in a template-free approach to making websites, and have spent much of my free time teaching
+				myself both HTML and CSS.
+				<br />
 				I'm still in the process of building this site, but feel free to browse by clicking on a photo below!
 			</h3>
 
-	<div class="row" >
-  <div class="col-sm-3">
-    <a title="Design" href="/Design">
-  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true"></a>
-    </div>
-  <div class="col-sm-3">
-    <a title="UI/UX design" href="/WebDesign">
-  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"></a>
-  </div>
-  <div class="col-sm-3">
-    <a title="Traditional Art" href="/Traditional">
-  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" ></a>
-  </div>
-  <div class="col-sm-3">
-    <a title="Dolls" href="/Dolls">
-  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true"></a>
-  </div>
-</div>
-	
-  </div>
-	<footer>
-	<i>© Erika Ornelas, 2025</i>
-	</footer>
-</body>		  
+			<div class="row">
+				<div class="col-sm-3">
+					<a title="Design" href="/Design">
+						<img
+							class="rounded"
+							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true"
+					/></a>
+				</div>
+				<div class="col-sm-3">
+					<a title="UI/UX design" href="/WebDesign">
+						<img
+							class="rounded"
+							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"
+					/></a>
+				</div>
+				<div class="col-sm-3">
+					<a title="Traditional Art" href="/Traditional">
+						<img
+							class="rounded"
+							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true"
+					/></a>
+				</div>
+				<div class="col-sm-3">
+					<a title="Dolls" href="/Dolls">
+						<img
+							class="rounded"
+							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true"
+					/></a>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<i>© Erika Ornelas, 2025</i>
+		</footer>
+	</body>
 </html>
