--- a/Design.html
+++ b/Design.html
@@ -1,4 +1,4 @@
-<html>
+<html lang=en>
 
 
 <head>
@@ -64,7 +64,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <li><a href="/">Home</a></li>
 </ul>
 	
-	 <h1 style="left:5%;"><i>Erika Ornelas</I></h1>
+	 <h1 style="left:5%;"><i>Erika Ornelas</i></h1>
 
 	
 	
@@ -152,9 +152,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	
 
-</details>
 </section>
 		</div>
+</details>
 	
 	<p></p>
 
@@ -365,10 +365,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 </div>
 </div>
-	<div class=subnavcontainer>
-  <ul style="float:Left;">
+	<div class=container-fluid style=background-color:transparent;>	
   <li><a href="#top">Jump to Top</a></li>
-</ul>
 </div>
 	<footer>
 	<i>© Erika Ornelas, 2025</i>
