--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥErika Ornelasꕥ</title>
+	<title>bruh</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="imggallery.css" rel="stylesheet" type="text/css" media="all">
+	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
