--- a/404.html
+++ b/404.html
@@ -21,14 +21,14 @@
 
    <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
+  <li><a href="/Contact">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
 
 	
       <p>
-<h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+<h1 style="left:10%;"><i>Erika Ornelas</i></h1>
   
 	<div class="container">
 		<section class="half">
