--- a/Dolls.html
+++ b/Dolls.html
@@ -51,17 +51,14 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 }
 </script>
 <body>
+		<ul>
+			<li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+			<li><a href="/Contact">Contact</a></li>
+			<li><a href="/About">About</a></li>
+			<li><a href="/">Home</a></li>
+		</ul>
 
- 
-
-  <ul>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
-  <li><a href="/About">About</a></li>
-  <li><a href="/">Home</a></li>
-</ul>
-	
-	 <h1 style="left:5%;"><i>Erika Ornelas</I></h1>
+		<h1 style="left: 5%"><i>Erika Ornelas</i></h1>
 
 	<header style="background:transparent;"> 
 		<span style="color:var(--berry)">Please click on each image for more info!</span>
