--- a/About.html
+++ b/About.html
@@ -15,20 +15,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
   
-  
-<center=left>
-<body>
 
-   <ul>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
-  <li><a href="/About">About</a></li>
-  <li><a href="/">Home</a></li>
-</ul>
+	<body>
+		<ul>
+			<li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+			<li><a href="/Contact">Contact</a></li>
+			<li><a href="/About">About</a></li>
+			<li><a href="/">Home</a></li>
+		</ul>
 
-
-
-  <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+		<h1 style="left: 5%"><i>Erika Ornelas</i></h1>
 	
 <div class="abtcontainer">
 
