--- a/404.html
+++ b/404.html
@@ -34,8 +34,10 @@
 		<section class="half">
        <p>
       <h1>Page Not Found </h1>
-	      
-	      <h2>  <a href="javascript:history.back()" style=color:#ffc7e7;>go back</a>
+
+		   <br>
+	      <h2>
+			  <a href="javascript:history.back()" style=color:#ffc7e7;>bruh</a>
       </h2>
 		</section>
 		</div>
