--- a/Design.html
+++ b/Design.html
@@ -150,7 +150,8 @@
                     <div class="mySlides">
                         <div class="container-fluid">
                             <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 60%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p> This piece was made to be an instagram post on various Lewis University instagram pages promoting CoHFAC Kickback.
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p> 
+							<h3>This piece was made to be an instagram post on various Lewis University instagram pages promoting CoHFAC Kickback.</h3>
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
                         </div>
@@ -196,7 +197,7 @@
                         <div class="container-fluid">
                             <img src="https://files.catbox.moe/19rjem.png" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Rage Against</h2></p>
-				This project was born out of a prompt to create something using Swiss Design sensibilities, and seeing as my professor at the time was obsessed with AI, my stubborn self decided to make this whole project revolve around my refusal to use AI in any of my schoolwork.
+				<h3>This project was born out of a prompt to create something using Swiss Design sensibilities, and seeing as my professor at the time was obsessed with AI, my stubborn self decided to make this whole project revolve around my refusal to use AI in any of my schoolwork.</h3>
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
                         </div>
@@ -205,7 +206,7 @@
                         <div class="container-fluid">
                             <img src="https://files.catbox.moe/bzovtw.png" style="width: 40%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Jack.</h2></p>
-							This project was meant to hone our skills in making a type based logo, so i used a fake brand called Jack., which I made way back as a kid in a skateboarding game to be... well a skateboarding brand.
+							<h3>This project was meant to hone our skills in making a type based logo, so i used a fake brand called Jack., which I made way back as a kid in a skateboarding game to be... well a skateboarding brand.</h3>
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
                         </div>
@@ -216,7 +217,7 @@
                             <p style="position: relative; bottom: 80px;">
 							<h2>Romeoville Night Market</h2>
 							</p>
-							This poster is for a fictional night market for the very real town that I live in. 
+							<h3>This poster is for a fictional night market for the very real town that I live in. </h3>
 <br>
 							 </div>
 
