--- a/Dolls.html
+++ b/Dolls.html
@@ -52,7 +52,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </script>
 <body>
 		<ul>
-			<li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+			<li><a href="https://www.linkedin.com/in/erikaornelasdx/">LinkedIn</a></li>
 			<li><a href="/Contact">Contact</a></li>
 			<li><a href="/About">About</a></li>
 			<li><a href="/">Home</a></li>
