--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 
 
    <ul>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+  <li><a href="https://www.linkedin.com/in/erikaornelasdx/">LinkedIn</a></li>
   <li><a href="/Contact">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
