--- a/index.html
+++ b/index.html
@@ -39,28 +39,21 @@
 			</h3>
 
 			<div class="row">
-				<div class="col-sm-3">
+				<div class="col-sm">
 					<a title="Design" href="/Design">
 						<img
 							class="rounded"
 							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true"
 					/></a>
 				</div>
-				<div class="col-sm-3">
-					<a title="UI/UX design" href="/WebDesign">
-						<img
-							class="rounded"
-							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"
-					/></a>
-				</div>
-				<div class="col-sm-3">
+				<div class="col-sm">
 					<a title="Traditional Art" href="/Traditional">
 						<img
 							class="rounded"
 							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true"
 					/></a>
 				</div>
-				<div class="col-sm-3">
+				<div class="col-sm">
 					<a title="Dolls" href="/Dolls">
 						<img
 							class="rounded"
