--- a/Traditional.html
+++ b/Traditional.html
@@ -88,7 +88,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 <section id="character" class="container-fluid">
 	
-	<header style="background:transparent;"> 
+	<header> 
 		<span>Character Work</span>
 	</header>
 	
@@ -125,7 +125,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	<br>
 <section id="illusoth" class="container-fluid">
-	<header style="background:transparent;"> 
+	<header> 
 		<span>Other Illustrations</span>
 	</header>
   
