--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					/></a>
 				</div>
 				<div class="col-sm">
-					<a title="Traditional Art" href="/Traditional">
+					<a title="Illustration" href="/Illustration">
 						<img
 							class="rounded"
 							src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true"
