--- a/404.html
+++ b/404.html
@@ -36,8 +36,9 @@
       <h1>Page Not Found </h1>
 
 		   <br>
+		   <br>
 	      <h2>
-			  <a href="javascript:history.back()" style=color:#ffc7e7;>bruh</a>
+			  <a href="javascript:history.back()" style=color:#ffc7e7;>go back!</a>
       </h2>
 		</section>
 		</div>
