--- a/Illustration.html
+++ b/Illustration.html
@@ -69,7 +69,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	
 	<header style="background:transparent;"> 
-		<span style="color: var(--berry)">Traditional Art & Illustrations</span>
+		<span style="color: var(--berry)">Illustration</span>
 		<br>
 		<h3 style="color: var(--berry)">Here you will find much of my casual work, I'm a doodler at heart and drawing was my first love, in a way.</h3>
 	</header>
@@ -86,7 +86,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 
 	
-<section id="character" class="container-fluid">
+<section id="character" class="container-fluid" style="background-color:var(--content)">
 	
 	<header> 
 		<span>Character Work</span>
@@ -124,7 +124,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <div class="container-fluid">
 	
 	<br>
-<section id="illusoth" class="container-fluid">
+<section id="illusoth" class="container-fluid" style="background-color:var(--content)">
 	<header> 
 		<span>Other Illustrations</span>
 	</header>
