--- a/Illustration.html
+++ b/Illustration.html
@@ -82,11 +82,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </ul>
 </div>
 	  
-<div class="container-fluid">
+<div class="container-fluid-body">
 	
 
 	
-<section id="character" class="container-fluid" style="background-color:var(--content)">
+<section id="character" class="container-fluid">
 	
 	<header> 
 		<span>Character Work</span>
