--- a/Illustration.html
+++ b/Illustration.html
@@ -121,7 +121,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	<p></p>
 	  
-<div class="container-fluid">
+<div class="container-fluid-body">
 	
 	<br>
 <section id="illusoth" class="container-fluid" style="background-color:var(--content)">
@@ -167,7 +167,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 
 	
-	<div class="container-fluid">
+	<div class="container-fluid-body">
 		<br>
 <section id="Life" class="container-fluid">
 	<header style="background:transparent;"> 
